--- a/Project2/pom.xml
+++ b/Project2/pom.xml
@@ -8,6 +8,13 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Project2 Maven Webapp</name>
 	<url>http://maven.apache.org</url>
+	
+		<properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<log4j.configuration>conf/log4j.properties</log4j.configuration>
+	</properties>
+	
 	<dependencies>
 		<dependency>
 			<groupId>javax.servlet</groupId>
