--- a/TestApp/package.json
+++ b/TestApp/package.json
@@ -3,12 +3,13 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server/index.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
+  "main": "server/index.js",
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.1.0",
