--- a/Project2/pom.xml
+++ b/Project2/pom.xml
@@ -112,7 +112,7 @@
 					<artifactId>maven-surefire-report-plugin</artifactId>
 					<version>2.22.0</version>
 					<configuration>
-						<outputDirectory>${basedir}/target/newsite</outputDirectory>
+						<outputDirectory>C:/Users/Administrator/git_repo/Project2/TestApp/dist/TestApp</outputDirectory>
 					</configuration>
 				</plugin>
 				<plugin>
