--- a/TestApp/package.json
+++ b/TestApp/package.json
@@ -26,6 +26,7 @@
     "protractor": "~5.3.0",
     "protractor-beautiful-reporter": "^1.2.4",
     "rxjs": "^6.0.0",
+    "webdriver-manager": "^12.0.6",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
