--- a/TestApp/package.json
+++ b/TestApp/package.json
@@ -49,6 +49,7 @@
     "protractor-beautiful-reporter": "^1.2.4",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "typescript": "~2.7.2",
+    "webdriver-manager": "^12.0.6"
   }
 }
