--- a/Project2/pom.xml
+++ b/Project2/pom.xml
@@ -153,8 +153,9 @@
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>2.22.0</version>
 					<configuration>
-						<includes>**/Assignforce*.java</includes>
-						<includes>**/TestRunner.java</includes>
+						<suiteXmlFiles>
+							<suiteXmlFile>src/test/java/Assignforce_Testing_KW.xml</suiteXmlFile>
+						</suiteXmlFiles>
 					</configuration>
 				</plugin>
 				<plugin>
